--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yJw-Sh-Q3J">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yJw-Sh-Q3J">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -160,6 +160,7 @@
                         <outlet property="theBottomConstraintToScrollView" destination="JS4-zR-K33" id="jCQ-yf-j3Q"/>
                         <outlet property="theStackView" destination="gwk-8T-bhR" id="Xid-jN-aBy"/>
                         <segue destination="Dim-SF-KDG" kind="show" identifier="EditProfileToAddingTagsSegue" id="ToD-It-t0K"/>
+                        <segue destination="k9a-3Y-UNa" kind="show" identifier="EditProfileToHeightPickerSegue" id="H5y-GO-sby"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9sO-nf-LbW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -173,6 +174,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVr-Qj-o86" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2270" y="1334"/>
+        </scene>
+        <!--Height Picker View Controller-->
+        <scene sceneID="DIl-0j-hbV">
+            <objects>
+                <viewController id="k9a-3Y-UNa" customClass="HeightPickerViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AeG-9G-Tmb"/>
+                        <viewControllerLayoutGuide type="bottom" id="s7O-2d-BRT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xte-ne-QON">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="830"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k5s-iV-ydD">
+                                <connections>
+                                    <outlet property="dataSource" destination="k9a-3Y-UNa" id="LoW-Hx-MWa"/>
+                                    <outlet property="delegate" destination="k9a-3Y-UNa" id="YGc-c4-Ima"/>
+                                </connections>
+                            </pickerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="49" translatesAutoresizingMaskIntoConstraints="NO" id="a6Y-NB-sr1">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ait-H3-va0">
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelPressed:" destination="k9a-3Y-UNa" eventType="touchUpInside" id="Ysb-h7-SHU"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wn5-FJ-weg">
+                                        <state key="normal" title="Done">
+                                            <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="donePressed:" destination="k9a-3Y-UNa" eventType="touchUpInside" id="nug-8k-mBT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="a6Y-NB-sr1" firstAttribute="top" secondItem="k5s-iV-ydD" secondAttribute="bottom" constant="10" id="5o0-XW-oev"/>
+                            <constraint firstItem="a6Y-NB-sr1" firstAttribute="centerX" secondItem="xte-ne-QON" secondAttribute="centerX" id="FU7-M0-v7h"/>
+                            <constraint firstItem="k5s-iV-ydD" firstAttribute="centerY" secondItem="xte-ne-QON" secondAttribute="centerY" id="QA3-bY-DgN"/>
+                            <constraint firstAttribute="trailing" secondItem="k5s-iV-ydD" secondAttribute="trailing" id="VN1-WQ-Vr9"/>
+                            <constraint firstItem="k5s-iV-ydD" firstAttribute="height" secondItem="xte-ne-QON" secondAttribute="height" multiplier="1/3" id="enP-KO-iks"/>
+                            <constraint firstItem="k5s-iV-ydD" firstAttribute="leading" secondItem="xte-ne-QON" secondAttribute="leading" id="rrf-cK-AGG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="theHeightPicker" destination="k5s-iV-ydD" id="GeF-ew-g0X"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cMk-ZA-cjl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="325" y="1387"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZoA-oy-tlM">
