--- a/ChachaT/AboutView.xib
+++ b/ChachaT/AboutView.xib
@@ -17,7 +17,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="374" height="55"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Char Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xnn-Sc-MjG">
@@ -51,19 +51,20 @@
             </subviews>
             <constraints>
                 <constraint firstItem="Lzg-4X-TrX" firstAttribute="leading" secondItem="Lyx-1d-1wd" secondAttribute="leading" constant="-2" id="9gF-Zx-7EW"/>
-                <constraint firstItem="Xnn-Sc-MjG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="H64-Qo-TRC"/>
+                <constraint firstItem="Xnn-Sc-MjG" firstAttribute="top" secondItem="Lyx-1d-1wd" secondAttribute="top" id="W0G-rQ-kPE"/>
                 <constraint firstAttribute="bottom" secondItem="wTI-Br-uFX" secondAttribute="bottom" constant="-1" id="dyx-d8-S0L"/>
                 <constraint firstItem="wTI-Br-uFX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gtX-nA-JSF"/>
                 <constraint firstAttribute="trailing" secondItem="Xnn-Sc-MjG" secondAttribute="trailing" constant="15" id="kDU-dP-TgL"/>
+                <constraint firstItem="Xnn-Sc-MjG" firstAttribute="bottom" secondItem="Lyx-1d-1wd" secondAttribute="bottom" id="okb-LD-ddM"/>
                 <constraint firstItem="Lyx-1d-1wd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="omr-QF-Sv2"/>
-                <constraint firstItem="wTI-Br-uFX" firstAttribute="top" secondItem="Lyx-1d-1wd" secondAttribute="bottom" id="ov1-3L-ltX"/>
+                <constraint firstItem="wTI-Br-uFX" firstAttribute="top" secondItem="Lyx-1d-1wd" secondAttribute="bottom" constant="5" id="ov1-3L-ltX"/>
                 <constraint firstItem="Lzg-4X-TrX" firstAttribute="trailing" secondItem="Xnn-Sc-MjG" secondAttribute="trailing" constant="2" id="ow6-Lw-kGF"/>
                 <constraint firstItem="Lyx-1d-1wd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="vnR-Rd-HgT"/>
                 <constraint firstAttribute="trailing" secondItem="wTI-Br-uFX" secondAttribute="trailing" id="zx4-8h-5pC"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="547" y="280"/>
+            <point key="canvasLocation" x="547" y="279"/>
         </view>
     </objects>
 </document>
