on the adding tag page, the height adds nicely and saves!

--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yJw-Sh-Q3J">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yJw-Sh-Q3J">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -178,7 +178,7 @@
         <!--Height Picker View Controller-->
         <scene sceneID="DIl-0j-hbV">
             <objects>
-                <viewController id="k9a-3Y-UNa" customClass="HeightPickerViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HeightPickerViewController" id="k9a-3Y-UNa" customClass="HeightPickerViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AeG-9G-Tmb"/>
                         <viewControllerLayoutGuide type="bottom" id="s7O-2d-BRT"/>
